--- a/src/app/voice-features/voice-features.component.html
+++ b/src/app/voice-features/voice-features.component.html
@@ -74,6 +74,8 @@ Service Number: {{model.serviceNumber}}</textarea>
           <mat-card-actions>
             <button mat-button [ngxClipboard]='voicefeature'>COPY</button>
             <button mat-button (click)="reset()">CLEAR</button>
+            <button mat-button (click)="form()">FORM</button>
+            <button mat-button (click)="spreadsheet()">SPREADSHEET</button>
           </mat-card-actions>
       </mat-card>
     </div>
