--- a/src/app/technical-voice/technical-voice.component.css
+++ b/src/app/technical-voice/technical-voice.component.css
@@ -1,21 +1,22 @@
-.tech-voice-full-width {
-    width: 100%;
-  }
 
-.tech-slider {
-  margin-bottom: 10px;
+.tech-voice-full-width {
+  width: 100%;
 }
 
-example-radio-group {
+.voice-tab-content {
+  padding: 16px;
+}
+
+voice-radio-group {
   display: inline-flex;
   flex-direction: row;
 }
 
-.example-radio-button {
+.voice-radio-button {
   /* width: 80%; */
-  margin-right: 40px;
+  margin-right: 35px;
 }
 
-.example-selected-value {
+.voice-selected-value {
   margin: 50px 0;
 }
